Cambios aprendi a hacer interfaces graficas

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,13 @@
 /Interfaz_cajero_actividad1/build/
 /Ultimaactividad/nbproject/private/
 /Ultimaactividad/build/
+/CalculadoraBase/nbproject/private/
+/CalculadoraBase/build/
+/JavaApplication71/nbproject/private/
+/CalculadoraBase/dist/
+/Clasenueva/nbproject/private/
+/Clasenueva/build/
+/Clasenueva2/nbproject/private/
+/Clasenueva2/build/
+/Datos/nbproject/private/
+/Datos/build/
